[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7" 
http = "1.3.1"
tokio={version="1", features=["full"]}
hyper = { version = "0.14", features = ["full"] }
tower = "0.5.2"
http-body="0.4"
anyhow = "1.0.34"
serde = {version="1.0.219", features=["derive"] }
serde_json = "1"
once_cell = "1.21.3"
color-eyre = "0.6.4"
crossterm = "0.29.0"
ratatui = "0.29.0"
chrono = "0.4.41"
redis = { version = "0.25", features = ["tokio-comp"] }
sha256 = "1.6.0"
hex = "0.4.3"
sha2 = "0.10.9"
dashmap = "6.1.0"
futures = "0.3.31"
regex = "1.11.1"
dotenv = "0.15.0"
hmac = "0.12.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
